@@ -380,4 +380,15 @@ function helper.round( number )
 	return number
 end
 
+function helper.shuffle( t )
+	-- since tables are passed by reference, this is an in-place shuffle
+	-- it uses the Fisher-Yates algorithm, also known as Knuth shuffle
+	assert( type( t ) == "table", string.format( "helper.shuffle expects a table as parameter, got %s instead", type( t ) ) )
+	local length = #t
+	for index, value in ipairs( t ) do
+		local random = math.random( 1, length )
+		t[index], t[random] = t[random], t[index]
+	end
+end
+
 return helper
