@@ -27,6 +27,7 @@ Version 1.11.1+svn:
      Portuguese (Brazil)
  * Lua API:
    * new wesnoth.get_time_stamp() function
+   * new helper.shuffle() function
  * Multiplayer:
    * Moved new lobby option in Preferences -> Multiplayer to Advanced
      Preferences and clarified description
